
1999-09-22 -Montel laurent <montell@club-internet.fr>
-----------------------------------------------------
-Bug fix : Now when you insert or remove column or row,there is recalculing
-Add new button on formula toolbar (SUM and Product)
-bugfix
-Now you can copy a function with "

1999-09-23 -Montel laurent <montell@club-internet.fr>
-----------------------------------------------------
-Now you can create a area when you click and press CTRL
-Add new dialog box for resize column or row

1999-09-24 -Montel laurent<montell@club-internet.fr>
-----------------------------------------------------       
-Improved function resize now you can resize a area
	format->Row->height
	format->Column->Width
-bugfix

1999-09-25 -Montel laurent<montell@club-internet.fr>
-----------------------------------------------------
-Now you can hide different tables
         format->table->hide
         format->table->show
and it's saving.

1999-09-26 -Montel laurent<montell@club-internet.fr>
-----------------------------------------------------
-Improved Special paste now you can paste only value.
-You can ajust column when it's text (for the moment Virtual formual
and QML don't work)

1999-09-27 -Montel laurent<montell@club-internet.fr>
-----------------------------------------------------
-Fix bug : Now when you delete a formula it works
-Add ajust for row

1999-09-29 -Montel laurent<montell@club-internet.fr>
-----------------------------------------------------
-Fix bug When you insert and remove column and row (Now it works)
-When you change name of a table, now all cells which refere to this table
now text is change to refere to new name.
-Now when you insert column (row) or remove column (row) and there are cell
which refere others cells so if these cells are moving so I modifie
reference.

1999-09-30  -Montel laurent<montell@club-internet.fr>
-----------------------------------------------------
-Now when you insert or remove column (or row) all is recalcing.